welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code

override def run() {
var diag = 0;
var c:Int=0

	for (y<-0 to getMondeHauteur()-1) 
	{ 
		for (x<-0 to getMondeHauteur()-1) 
	{	setPos(y,y)
		ecritMessage(c)
		y=y+1
		c=c+1
	}
setPos(y,y)
	}
setPos(6,6)
}
